--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "Ricardo Soto Estévez",
   "license": "GPL-3.0-or-later",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only  ./src/index.ts",
-    "prod": "tsc && node ./dist/index.js"
+    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register ./src/index.ts",
+    "prod": "tsc && node -r tsconfig-paths/register ./dist/index.js"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
@@ -18,6 +18,7 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "ts-node-dev": "^1.1.8"
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.10.1"
   }
 }
