--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,11 @@
 	  "outDir": "dist",
 	  "baseUrl": ".",
 	  "paths": {
-		"*": [
-		  "node_modules/",
-		  "src/types/*"
+		"@server": [
+			"src/Server"
+		],
+		"@*": [
+			"src/*"
 		]
 	  }
 	},
