--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register ./src/index.ts",
-    "prod": "tsc && node -r tsconfig-paths/register ./dist/index.js"
+    "prod": "tsc && node -r tsconfig-paths/register ./dist/index.js -e production"
   },
   "dependencies": {
-    "@types/express": "^4.17.13",
     "body-parser": "^1.19.0",
+    "command-line-args": "^5.1.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "socket.io": "^4.1.3",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@types/command-line-args": "^5.0.1",
+    "@types/express": "^4.17.13",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.10.1"
   }
