--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "repository": "https://github.com/kriogenia/4l1-service",
   "author": "Ricardo Soto Estévez",
   "license": "GPL-3.0-or-later",
+  "engines": {
+	"node": ">=v15.7.0"
+  },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register ./src/index.ts",
-    "prod": "tsc && node -r tsconfig-paths/register ./dist/index.js -e production"
+    "prod": "tsc && node -r tsconfig-paths/register ./dist/index.js -e production",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -21,6 +25,12 @@
   "devDependencies": {
     "@types/command-line-args": "^5.0.1",
     "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.10.1"
   }
