--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Ricardo Soto Estévez",
   "license": "GPL-3.0-or-later",
   "engines": {
-	"node": ">=v15.7.0"
+    "node": ">=v15.7.0"
   },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register ./src/index.ts",
@@ -20,17 +20,21 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.0.1",
     "@types/express": "^4.17.13",
+    "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
+    "jest": "^27.0.6",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.10.1"
   }
