--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "command-line-args": "^5.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "jet-logger": "^1.0.6",
     "morgan": "^1.10.0",
     "socket.io": "^4.1.3",
