--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   },
   "dependencies": {
     "@types/morgan": "^1.9.3",
-    "body-parser": "^1.19.0",
     "command-line-args": "^5.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "jet-logger": "^1.0.6",
+    "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
