--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
 	"lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^8.1.1",
     "@types/morgan": "^1.9.3",
     "command-line-args": "^5.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.6",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
