--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
 	  "noImplicitAny": true,
 	  "moduleResolution": "node",
 	  "resolveJsonModule": true,
+	  "experimentalDecorators": true,
+	  "emitDecoratorMetadata": true,
 	  "sourceMap": true,
 	  "outDir": "dist",
 	  "baseUrl": ".",
