--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "node": ">=v15.7.0"
   },
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register ./src/index.ts",
+    "dev": "ts-node-dev --respawn -r tsconfig-paths/register ./src/index.ts",
     "prod": "tsc && node -r tsconfig-paths/register ./dist/index.js -e production",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^8.1.1",
     "@types/morgan": "^1.9.3",
     "command-line-args": "^5.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.6",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
