--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.6",
+    "mongodb-memory-server": "^7.3.5",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
     "socket.io": "^4.1.3",
