--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@typegoose/typegoose": "^8.1.1",
     "@types/command-line-args": "^5.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
