--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@typegoose/typegoose": "^8.1.1",
-    "@types/morgan": "^1.9.3",
     "command-line-args": "^5.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "google-auth-library": "^7.5.0",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
     "jet-logger": "^1.0.6",
-    "mongodb-memory-server": "^7.3.5",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
     "socket.io": "^4.1.3",
@@ -32,9 +31,12 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@typegoose/typegoose": "^8.1.1",
     "@types/command-line-args": "^5.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/jsonwebtoken": "^8.5.4",
+    "@types/morgan": "^1.9.3",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
@@ -42,6 +44,7 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "jest": "^27.0.6",
+    "mongodb-memory-server": "^7.3.5",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.10.1"
   }
