--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,8 @@
       "@typescript-eslint/no-unsafe-assignment": 0,
       "@typescript-eslint/no-misused-promises": 0,
 	  "node/no-unsupported-features/es-syntax": 0,
-	  "node/no-missing-import": 0
+	  "node/no-missing-import": 0,
+	  "node/no-unpublished-import": 0
     },
 	"settings": {
 		"import/parsers": {
