--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/morgan": "^1.9.3",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "eslint": "^7.30.0",
@@ -48,6 +49,7 @@
     "eslint-plugin-node": "^11.1.0",
     "jest": "^27.0.6",
     "mongodb-memory-server": "^7.3.5",
+    "supertest": "^6.1.6",
     "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.10.1"
