--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,10 @@
 		"sourceMap": true,
 		"outDir": "dist",
 		"baseUrl": ".",
+		"typeRoots": [
+			"./src/@types",
+			"./node_modules/@types"
+		],
 		"paths": {
 			"@test-util/*": [
 				"__tests__/util/*"
@@ -26,6 +30,7 @@
 	"include": [
 		"src/**/*",
 		"__tests__/**/*",
-		"jest.config.ts"
+		"jest.config.ts", 
+		"@types/**/*"	
 	]
 }
