--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "morgan": "^1.10.0",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
-    "ts-jest": "^27.0.3",
     "tscpaths": "^0.0.9",
     "typescript": "^4.3.5"
   },
@@ -38,8 +37,9 @@
     "@typegoose/typegoose": "^8.1.1",
     "@types/command-line-args": "^5.0.1",
     "@types/express": "^4.17.13",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.4",
+	"@types/node": "15.14.2",
     "@types/morgan": "^1.9.3",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
@@ -48,10 +48,10 @@
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
-    "jest": "^27.0.6",
+    "jest": "^27.2.2",
     "mongodb-memory-server": "^7.3.5",
     "supertest": "^6.1.6",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.10.1"
   }
