--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "node": ">=v15.7.0"
   },
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register ./src/index.ts",
-    "prod": "tsc && node -r tsconfig-paths/register ./dist/index.js -e production",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "build": "tsc --project tsconfig-prod.json && tscpaths -p tsconfig-prod.json -s ./src -o ./dist",
+    "dev": "ts-node-dev --respawn -r tsconfig-paths/register ./src/index.ts -e development",
+    "prod": "tsc && ts-node -r tsconfig-paths/register ./dist/index.js -e production",
+    "test": "jest",
+	"lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@types/morgan": "^1.9.3",
@@ -26,6 +28,7 @@
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
     "ts-jest": "^27.0.3",
+    "tscpaths": "^0.0.9",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
