--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "dev": "ts-node-dev --respawn -r tsconfig-paths/register ./src/index.ts -e development",
     "prod": "tsc && ts-node -r tsconfig-paths/register ./dist/index.js -e production",
     "test": "jest",
-	"lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@typegoose/typegoose": "^8.1.1",
+    "arr-union": "^3.1.0",
     "command-line-args": "^5.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -39,8 +40,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.4",
-	"@types/node": "15.14.2",
     "@types/morgan": "^1.9.3",
+    "@types/node": "15.14.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
