--- a/tsconfig-prod.json
+++ b/tsconfig-prod.json
@@ -6,15 +6,18 @@
 	  "noImplicitAny": true,
 	  "moduleResolution": "node",
 	  "resolveJsonModule": true,
+	  "experimentalDecorators": true,
+	  "emitDecoratorMetadata": true,
 	  "sourceMap": true,
 	  "outDir": "dist",
 	  "baseUrl": ".",
+	  "typeRoots": [
+		  "./src/@types",
+		  "./node_modules/@types"
+	  ],
 	  "paths": {
 		"@server": [
 			"src/Server"
-		],
-		"@/shared/*": [
-			"src/shared/*"
 		],
 		"@/*": [
 			"src/*"
@@ -22,6 +25,6 @@
 	  }
 	},
 	"include": [
-	  "src/**/*"
+	  "src/**/*"	
 	]
   }
