--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "tsc --project tsconfig-prod.json && tscpaths -p tsconfig-prod.json -s ./src -o ./dist",
     "dev": "ts-node-dev --respawn -r tsconfig-paths/register ./src/index.ts -e development",
-    "prod": "tsc && ts-node -r tsconfig-paths/register ./dist/index.js -e production",
+    "prod": "tsc --project tsconfig-prod.json && tscpaths -p tsconfig-prod.json -s ./src -o ./dist",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
@@ -35,7 +35,6 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "@typegoose/typegoose": "^8.1.1",
     "@types/command-line-args": "^5.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
